refactor: code clean